--- a/Merge/src/main/resources/templatesMevron/checkout.html
+++ b/Merge/src/main/resources/templatesMevron/checkout.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Accept a payment</title>
     <meta name="description" content="A demo of a payment on Stripe" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="checkout.css" />
+    <link rel="stylesheet" href="css/checkout.css" />
     <script src="https://js.stripe.com/v3/"></script>
     <script th:inline="javascript">
         var stripePublicKey=/*[[${stripePublicKey}]]*/ null;
     </script>
-    <script src="checkout.js" defer></script>
+    <script src="js/checkout.js" defer></script>
 </head>
 <body>
 <!-- Display a payment form -->
